<resources>
    <string name="app_name">Suppa Fishing</string>
    <string name="new_game">Create New Game</string>
    <string name="name">Name</string>
    <string name="money">Money</string>
    <string name="days">Days</string>
    <string name="create">Create Game</string>
    <string name="view_db">View Database</string>
    <string name="update_db">Update</string>
    <string name="id">ID</string>
    <string name="player_information">Player Information</string>
    <string name="delete_db">Delete Data</string>
    <string name="marketplace">Marketplace</string>
    <string name="resume_game">Resume Game</string>
</resources>
